# lba2-classic-community

./: .clang-format  .clang-format-ignore  .editorconfig  .git-blame-ignore-revs  .gitignore  AGENTS.md  ASM_VALIDATION_PROGRESS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODESTYLE.md  CONTRIBUTING.md  Dockerfile.test  GFX_OPTIONS.MD  Makefile  README.md  TODO.md  cliff.toml  run_tests_docker.sh
LIB386/: CMakeLists.txt
LIB386/3D/: ARCSIN.ASM  CAMERA.ASM  CAMERA.CPP  CMakeLists.txt  COPYMAT.ASM  COPYMATF.ASM  COPYMATF.CPP  COPYMATI.ASM  COPYMATM.ASM  DATAMAT.ASM  DATAMAT.CPP  DISTANCE.ASM  DISTANCE.CPP  FLIPMAT.ASM  FLIPMATI.ASM  FLIPMATM.ASM  GETANG2D.ASM  GETANG2D.CPP  GETANG3D.ASM  GETANG3D.CPP  GMATTRA.ASM  GMATTRAF.ASM  GMATTRAI.ASM  GMATTRAM.ASM  IMAT.ASM  IMAT3DS.ASM  IMAT3DSF.ASM  IMAT3DSI.ASM  IMAT3DSM.ASM  IMATSTD.ASM  IMATSTD.CPP  IMATSTDF.ASM  IMATSTDF.CPP  IMATSTDI.ASM  IMATSTDM.ASM  IMATTRA.ASM  IMATTRAF.ASM  IMATTRAF.CPP  IMATTRAI.ASM  IMATTRAM.ASM  (+118 more)
LIB386/AIL/: CD.CPP  CMakeLists.txt  COMMON.CPP  MIDI.CPP  MIXER.CPP  MIXER.H  SAMPLE.CPP  STREAM.CPP  TIMER.CPP
LIB386/ANIM/: ANIM.ASM  ANIM.CPP  BODY.ASM  BODY.CPP  CLEAR.ASM  CLEAR.CPP  CMakeLists.txt  FRAME.ASM  FRAME.CPP  INTANIM.ASM  INTANIM.CPP  INTERDEP.ASM  INTERDEP.CPP  INTFRAME.ASM  INTFRAME.CPP  LIBINIT.ASM  LIBINIT.CPP  STOFRAME.ASM  STOFRAME.CPP  TEXTURE.ASM  TEXTURE.CPP
LIB386/FILEIO/: CMakeLists.txt  LOADPCX.CPP  PCX.CPP  PCXHEAD.H  SAVEPCX.CPP  SAVEPNG.CPP  stb_image_write.h
LIB386/H/: 3D.H  AFF_OBJ.INC  AIL.H  ANIM.H  FILEIO.H  FILLER.H  IAMMX.INC  INITADEL.C  MENU.H  OBJECT.H  POLYGON.H  SMACKER.H  SMACKER_ADELINE.H  SVGA.H  SYSTEM.H
LIB386/MENU/: CMakeLists.txt  MENUFUNC.CPP  MENULIB.CPP  SELECTOR.CPP  SORT.ASM  SORT.CPP
LIB386/OBJECT/: 3D_OBJ.ASM  AFF_OBJ.ASM  AFF_OBJ.CPP  CMakeLists.txt
LIB386/SMACKER/: README.md  SMACKER.CPP
LIB386/SNAPSHOT/: CMakeLists.txt  POLY_RECORDING.CPP  SNAPSHOT.CPP
LIB386/SVGA/: AFFSTR.ASM  AFFSTR.CPP  BLITBOV.ASM  BLITBOVF.ASM  BLITBOVI.ASM  BLITBOVM.ASM  BLITBOX.ASM  BLITBOXF.ASM  BLITBOXF.CPP  BLITBOXI.ASM  BLITBOXM.ASM  BOX.ASM  BOX.CPP  CALCMASK.ASM  CALCMASK.CPP  CLEABOV.ASM  CLEABOVF.ASM  CLEABOVI.ASM  CLEABOVM.ASM  CLIP.ASM  CLIP.CPP  CLRBOX.ASM  CLRBOXF.ASM  CLRBOXF.CPP  CLRBOXI.ASM  CLRBOXM.ASM  CMakeLists.txt  COPYBOV.ASM  COPYBOVF.ASM  COPYBOVI.ASM  COPYBOVM.ASM  COPYBOX.ASM  COPYBOX.CPP  COPYBOXF.ASM  COPYBOXI.ASM  COPYBOXM.ASM  COPYMASK.ASM  COPYMASK.CPP  CPYBLOCI.ASM  CPYBLOCI.CPP  (+38 more)
LIB386/SYSTEM/: ANDROID.CPP  AVAILMEM.CPP  A_MALLOC.CPP  CHOOSER.ASM  CMDLINE.CPP  CMakeLists.txt  CPU.ASM  CPU.CPP  CUE.CPP  DEFFILE.CPP  DIRECTORIES.CPP  DISCIMG.CPP  DISKDIR.CPP  DISPCPU.CPP  DISPOS.CPP  DOSMALLO.ASM  DOSSYS.CPP  EVENTS.CPP  EXIT.CPP  FASTCPY.ASM  FASTCPYF.ASM  FASTCPYF.CPP  FASTCPYI.ASM  FASTCPYM.ASM  FASTSET.ASM  FASTSETF.ASM  FASTSETI.ASM  FASTSETM.ASM  FILEBAK.CPP  FILEBAK.cpp  FILECOPY.CPP  FILENAME.CPP  FILENAME.cpp  FILES.CPP  FOCUS_AUDIO.CPP  HQFILE.CPP  HQMEM.CPP  HQRLOAD.CPP  HQRMEM.CPP  HQRMEM.cpp  (+37 more)
LIB386/VIDEO_AUDIO_RESAMPLE/: CMakeLists.txt  VIDEO_AUDIO_RESAMPLE.CPP
LIB386/ail/: MIDDIG.CPP  SAMPLE.CPP
LIB386/libsmacker/: CMakeLists.txt  README.md  smacker_compat.c
LIB386/pol_work/: CMakeLists.txt  POLY.ASM  POLY.CPP  POLYCLIP.ASM  POLYCLIP.CPP  POLYDISC.ASM  POLYDISC.CPP  POLYFILT.CPP  POLYFLAT.ASM  POLYFLAT.CPP  POLYGOUR.ASM  POLYGOUR.CPP  POLYGTEX.ASM  POLYGTEX.CPP  POLYLINE.ASM  POLYLINE.CPP  POLYTEXT.ASM  POLYTEXT.CPP  POLYTEXT.CPP.backup  POLYTEXZ.ASM  POLYTEXZ.CPP  POLYTZF.ASM  POLYTZF.CPP  POLYTZG.ASM  POLYTZG.CPP  POLY_HDR.ASM  POLY_JMP.ASM  POLY_JMP.CPP  TESTVUE.ASM  TESTVUEF.ASM  TESTVUEF.CPP  TESTVUEI.ASM  TESTVUEM.ASM
LIB386/smacker/: SMACKER.CPP
SOURCES/: ADDKEYS.H  AMBIANCE.CPP  AMBIANCE.H  ANIMTEX.CPP  ANIMTEX.H  ASSET_PREFLIGHT.CPP  ASSET_PREFLIGHT.H  AUDIO_BALANCE.CPP  BEZIER.CPP  BEZIER.H  BUGGY.CPP  BUGGY.H  BUILD_INFO.CPP  BUILD_INFO.h.in  CHEATCOD.CPP  CHEATCOD.H  CLI_ARGS.CPP  CLI_ARGS.H  CMakeLists.txt  COMMON.H  COMPORTE.CPP  COMPORTE.H  COMPRESS.ASM  COMPRESS.CPP  CONFIG.CPP  CONFIG.H  CONTROL.CPP  CONTROL.H  COPY.ASM  COPY.CPP  CREDITS.CPP  CREDITS.H  CREDITS_PARSE.CPP  CREDITS_PARSE.H  CRITICAL.CPP  CRITICAL.H  C_EXTERN.H  DART.CPP  DART.H  DEC.ASM  (+143 more)
SOURCES/3DEXT/: BOXZBUF.ASM  BOXZBUF.CPP  BOXZBUF.H  CMakeLists.txt  DECORS.CPP  DECORS.H  DEFINES.H  DRAWSKY.CPP  EXTERN.H  GLOBEXT.CPP  LBA_EXT.CPP  LBA_EXT.H  LINERAIN.ASM  LINERAIN.CPP  LOADISLE.CPP  LOADISLE.H  MAPTOOLS.CPP  MAPTOOLS.H  SELECT.H  TERRAIN.CPP  TERRAIN.H  VAR_EXT.CPP  VAR_EXT.H
SOURCES/CONFIG/: ADDKEYS.H  AFFKEY.CPP  CONFIG.CPP  CONFIG.H  C_EXTERN.H  INPUT.CPP  INPUT.H  LBA2.CFG  MAIN.CPP
SOURCES/CONSOLE/: CMakeLists.txt  CONSOLE.CPP  CONSOLE.H  CONSOLE_CMD.CPP  CONSOLE_STATE.CPP  CONSOLE_STATE.H
SOURCES/LOG/: LOG.CPP  LOG.H
SOURCES/WIN/: RESOURCE.H
tests/: CMakeLists.txt  test_compress.cpp  test_fire.cpp  test_flow_a.cpp  test_func.cpp  test_grille.cpp  test_harness.h  test_plasma.cpp
tests/3D/: CMakeLists.txt  test_copymatf.cpp  test_getang2d.cpp  test_getang3d.cpp  test_imatstdf.cpp  test_imattraf.cpp  test_lirot3df.cpp  test_litlistf.cpp  test_lproj3df.cpp  test_lprojiso.cpp  test_lrot2df.cpp  test_lrot3df.cpp  test_mulmatf.cpp  test_prli3df.cpp  test_prliiso.cpp  test_proj.cpp  test_regle3.cpp  test_rotmatu.cpp  test_rotralif.cpp  test_rotvect.cpp  test_sintab.cpp  test_sintabf.cpp  test_sqrroot.cpp  test_tantab.cpp
tests/3DEXT/: CMakeLists.txt  test_boxzbuf.cpp  test_linerain.cpp
tests/ANIM/: CMakeLists.txt  anim_test_fixture.h  test_anim.cpp  test_body.cpp  test_clear.cpp  test_frame.cpp  test_intanim.cpp  test_interdep.cpp  test_intframe.cpp  test_libinit.cpp  test_stoframe.cpp  test_texture.cpp
tests/MENU/: CMakeLists.txt  test_sort.cpp
tests/OBJECT/: CMakeLists.txt  test_aff_obj.cpp
tests/SNAPSHOT/: CMakeLists.txt  bisect_objects.sh  bisect_polyrec.sh  compare_polyrec.sh  compare_snapshots.sh  parse_snap.py  polyrec_asm_wrappers.cpp  polyrec_replay.cpp  polyrec_replay.h  render_polyrec.sh  render_snapshots.sh  replay_polyrec_main.cpp  replay_snapshot_main.cpp  snapshot_globals_stub.cpp  (+2 more)
(+613 files in other folders)
