# General sources
set(SOURCES_FILES CAMERA.CPP DATAMAT.CPP DISTANCE.CPP LIROT3D.CPP LPROJ.CPP LROT3D.CPP MOVE.CPP ROT3D.CPP IMATSTD.CPP)

set(SOURCES_FILES_ASM COPYMAT.ASM COPYMATF.ASM GETANG2D.ASM GETANG3D.ASM IMATSTD.ASM IMATSTDF.ASM IMATTRA.ASM
        IMATTRAF.ASM IROT3D.ASM LIGHT.ASM LIROT3D.ASM LIROT3DF.ASM LITLIST.ASM LITLISTF.ASM LPROJ.ASM LPROJ3D.ASM
        LPROJ3DF.ASM LPROJISO.ASM LROT2D.ASM LROT2DF.ASM LROT3D.ASM LROT3DF.ASM MULMAT.ASM MULMATF.ASM PRLI.ASM
        PRLI3D.ASM PRLI3DF.ASM PRLIISO.ASM PROJ.ASM REGLE3.ASM ROT2D.ASM ROT3D.ASM ROTMAT.ASM ROTMATU.ASM ROTRALI.ASM
        ROTRALIF.ASM ROTVECT.ASM SINTAB.ASM SINTABF.ASM SQRROOT.ASM TANTAB.ASM)

add_library(3D ${SOURCES_FILES} ${SOURCES_FILES_ASM})

# Configure all ASM files to be recognized as such (workaround for bug where .ASM uppercase extension is not recognized)
foreach (FILE_ASM IN LISTS SOURCES_FILES_ASM)
    set_source_files_properties(${FILE_ASM} PROPERTIES LANGUAGE ASM_MASM)
endforeach ()
